# dexpr

./: .gitignore  CLAUDE.md  Cargo.toml  gen.js  justfile
benches/: my_benchmark.rs
docs/: architecture.md  ast.md  bytecode.md  compiler.md  editor.md  embedding.md  language_info.md  opcodes.md  parser.md  vm.md
editor/: demo.html  demo.ts  package.json
editor/src/: completions.test.ts  completions.ts  dexpr.grammar  highlight.ts  index.ts  language.ts  parser.js  parser.terms.js  tokens.ts
examples/: bench_long.dexpr  bench_sample.dexpr
src/: basic_long.dexpr  bytecode.rs  bytecode_dump.rs  compiler.rs  language_info.rs  lib.rs  main.rs  opcodes.rs  sample.dexpr  sample_test.dexpr  sample_test_asm.txt
src/ast/: expr.rs  mod.rs  stmt.rs  value.rs
src/parser/: grammar.rs  mod.rs
src/vm/: builtins.rs  debug_info.rs  error.rs  methods.rs  mod.rs  vm.rs
tests/: data_driven_tests.rs  integration_tests.rs  test_cases.json
wasm/: Cargo.toml
wasm/src/: lib.rs
