[package]
name = "dexpr"
version = "0.1.0"
edition = "2021"
description = "Embeddable expression evaluator and bytecode VM"
license = "MIT"
exclude = ["editor/", "wasm/", "docs/", ".vscode/", "benches/", "scripts/", "CLAUDE.md", "flamegraph.svg", "profile.json.gz", "gen.js", "*.dexpr", "*.txt", "src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
incremental = true
debug = true
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
split-debuginfo = "packed"
opt-level = 3
overflow-checks = false
panic = "unwind"

[dependencies]
rust_decimal = { version = "1.41.0", features = ["maths"] }
rust_decimal_macros = "1.40.0"
rand = "0.10.0"
smallvec = "1.15.1"
rustc-hash = "2.1.2"
peg = "0.8.5"
smol_str = "0.3.6"
micromap = "0.3.0"
thiserror = "2.0.18"
bumpalo = "3.20.2"
indexmap = "2"
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "my_benchmark"
harness = false
