[package]
name = "dexpr-wasm"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dexpr = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
rust_decimal = "1.41.0"
smol_str = "0.3.6"
indexmap = "2"
# Required for rand/crypto to work in WASM (browser crypto.getRandomValues)
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[profile.release]
opt-level = "s"
lto = true
